2011-08-06  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (all_fde_data): Export.
	* dw2gencfi.h (all_fde_data): Declare.
	* config/tc-alpha.c (alpha_elf_md_end): Don't convert legacy unwind
	info to cfi unwind info if the user already has supplied some.

2011-08-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (emit_nop): Delete.
	(get_delay_slot_nop): New function.
	(nops_for_insn_or_target): Use it.
	(append_insn): Likewise.  When avoiding hazards, call add_fixed_insn
	and insert_into_history directly.

2011-08-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (delayed_branch_p, compact_branch_p)
	(uncond_branch_p, branch_likely_p): New functions.
	(insns_between, nops_for_insn_or_target, append_insn)
	(macro_start): Use them.
	(get_append_method): Likewise.  Remove redundant test.

2011-08-05  David S. Miller  <davem@davemloft.net>

	* config/tc-sparc.c (v9a_asr_table): Add "cps".
	(sparc_ip): Handle '4', '5' and '(' format codes.

2011-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/13056
	* output-file.c (output_file_close): Call bfd_cache_close_all
	on error.

	* write.c (write_object_file): Revert the last change.

2011-08-04  Alan Modra  <amodra@gmail.com>

	* write.c (write_object_file): Call set_symtab even if we had
	errors.

2011-08-04  Tristan Gingold  <gingold@adacore.com>

	* config/obj-elf.c (obj_elf_section): Do not free name.

2011-08-03  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/tc-arm.c (do_t_strexbh): New.
	(insns): Update accordingly.

2011-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/13048
	* config/tc-i386.c (handle_quad): Removed.
	(md_pseudo_table): Remove "quad".
	(tc_gen_reloc): Don't check BFD_RELOC_64 for disallow_64bit_reloc.
	(x86_dwarf2_addr_size): New.

	* config/tc-i386.h (x86_dwarf2_addr_size): New.
	(DWARF2_ADDR_SIZE): Likewise.

2011-08-01  Nick Clifton  <nickc@redhat.com>

	PR ld/12974
	* config/tc-arm.c (literal_pool): Add locs field.